--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,14 @@
     <script src="https://code.angularjs.org/1.4.0-rc.2/angular-animate.js"></script>
     <script src="https://code.angularjs.org/1.4.0-rc.2/angular-cookies.js"></script>
     <script src="/js/chatapp.js"></script>
+    <script src="/js/timer.js"></script>
     
     <!--3rd party dependencies -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.14.3/ui-bootstrap.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.7/socket.io.js"></script>
+    <script src="http://momentjs.com/downloads/moment.js"></script>
+    
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
